2004-07-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/Checkerboard.cpp: Added this shader.

	* src/shaders/Derivatives.cpp: Added this shader.

2004-07-05  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/util.cpp: Remove refract function.

	* src/util.hpp: Remove refract function.

	* src/utilimpl.hpp: Remove clamp functions.

	* ChangeLog: Clean up the spaces in this file a bit.

	* src/ShrikeFrame.cpp: Implement fragment/vertex program interface
	displays using ShProgramNode::describe_interface().

	* src/ShrikeFrame.hpp: Add functions for viewing fragment/vertex
	program interfaces.

2004-06-30  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/util.hpp: Remove reflect function, since Sh now has a real one.

2004-06-28  Bryan Chan <b8chan@uwaterloo.ca>
	
	* src/shaders/LCDSmall.?pp, src/ShrikeCanvas.?pp: Crammed the FPS
	counter under ATI limits. (issue121)

2004-06-19  Bryan Chan <b8chan@uwaterloo.ca>

	* src/shaders/WorleyShader.cpp: Minor improvements to the worley
	shaders for the video and final poster submission.

	* src/shaders/AlgebraShader.cpp: Updated for worley interfaces
	that match the book.

	* src/shaders/LCD.cpp:
	Added restriction on number of fractional digits.

	* src/ShrikeCanvas.cpp:
	Added FPS counter using LCD shader.

	* src/Timer.?pp: Copied these over from shdemo for timing
	functions.
	
2004-06-16  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (showProgram): You guessed it... More fixes
	for the new ShProgram class.

	* src/ShrikeFrame.hpp: Fixes for the new ShProgram class.

	* src/UniformPanel.cpp (setShader): Fixes for new ShProgram class.

2004-06-11  Bryan Chan <b8chan@uwaterloo.ca>

	* src/ShrikeCanvas.?pp (renderObject): Use display lists. (Fix
	issue120)

2004-06-10  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/AlgebraShader.cpp (init_all): Use the NDC position
	to halftone, instead of texture coordinates.

	* src/shaders/LCD.cpp: This should be a great debugging tool :).
